EcommerceApp/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deploy
  namespace: ecommerce-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ecommerce
    spec:
      containers:
        - name: ecommerce-cont
          image: suryaa112003/ecommerce:v1.1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            requests:
              cpu: "200m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-svc
  namespace: ecommerce-ns
spec:
  selector:
    app: ecommerce
  ports:
    - port: 8080
      targetPort: 81
  type: NodePort
