EcommerceApp/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-route
  namespace: ecommerce-ns
spec:
  parentRefs:
    - name: surya-gateway
  rules:
    - matches:
        path:
          type: PathPrefix
          value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ecommerce-svc
          port: 8080
